--- a/cmpt.tex
+++ b/cmpt.tex
@@ -1,4 +1,6 @@
 \documentclass[12pt]{article}
+\usepackage[french]{babel}
+\usepackage{amsmath}
 \usepackage{cmpt}
 \usepackage{lipsum}
 \usepackage{tikz}
@@ -11,24 +13,40 @@
 
 \begin{document}
 
-    \maketitle
+\maketitle
 
-    \begin{abstract}
-        \lipsum[1]
-    \end{abstract}
+\begin{abstract}
+    \lipsum[1]
+\end{abstract}
 
-    \newpage
+\newpage
 
-    \tableofcontents
+\tableofcontents
 
-    \newpage
+\newpage
 
-    \foreach \x in {1,...,5}{
+\code{function}
+
+\type{Type}
+
+\begin{mcode}
+    void foo(int a) \{
+
+    $\tab$ return a;
+
+    $\tab{00001}$ return a; // dead code
+
+    \}
+\end{mcode}
+
+\newpage
+
+\foreach \x in {1,...,5}{
         \section{Section \x}
         \foreach \y in {1,...,5}{
-            \subsection{Sous-section \y}
-            \lipsum[1-5]
-        }
+                \subsection{Sous-section \y}
+                \lipsum[1-5]
+            }
     }
 
 \end{document}
